--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,1 +1,12 @@
 /* BASIC STYLES HERE */
+
+.create-button {
+  position: fixed;
+  bottom: 1em;
+  right: 1em;
+  border-radius: 50%;
+}
+
+.height {
+  height: 500px;
+}
